# sqlite-as-mcp

./: pyproject.toml
.clinerules/: .clinerules-database-tool
sqlite_as_mcp/: __main__.py  server.py
sqlite_as_mcp/database/: ddl.py  sqlite.py
tests/: test_sqlite_database.py
